--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,10 @@ inputs:
   commit_message:
     description: 'A custom message for the commmit'
     required: false
+secrets: 
+  API_TOKEN_GITHUB:
+    required: true
+     
 runs:
   using: 'docker'
   image: 'Dockerfile'
